--- a/papers/college-previous-year.html
+++ b/papers/college-previous-year.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Download free previous year question papers for college exams - BSc, BA, BCom, BBA, BCA from Himachal Pradesh universities">
+    <meta name="description" content="Download free previous year question papers for college exams - BSc, BA, BCom, BBA, BCA, MSc from Himachal Pradesh universities">
     <title>College Previous Year Papers | HP Exam Hub</title>
     <link rel="icon" href="/assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -41,7 +41,7 @@
           <p class="text-gray-700">Select your course to access previous year question papers:</p>
         </div>
 
-        <!-- Bachelor's Degree Accordions -->
+        <!-- Bachelor's and Master's Degree Accordions -->
         <div class="space-y-6">
           <!-- BSc Section -->
           <div class="bg-blue-50 rounded-xl overflow-hidden">
@@ -88,6 +88,53 @@
                     <li><a href="/papers/college/bsc-3-chemistry.html" class="text-blue-600 hover:underline">Chemistry</a></li>
                     <li><a href="/papers/college/bsc-3-botany.html" class="text-blue-600 hover:underline">Botany</a></li>
                     <li><a href="/papers/college/bsc-3-zoology.html" class="text-blue-600 hover:underline">Zoology</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- MSc Section -->
+          <div class="bg-green-50 rounded-xl overflow-hidden">
+            <button class="accordion-toggle w-full flex justify-between items-center p-4 bg-green-600 text-white font-semibold">
+              <span>Master of Science (MSc)</span>
+              <svg class="h-5 w-5 transform transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+              </svg>
+            </button>
+            <div class="accordion-content hidden p-4">
+              <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <!-- MSc Chemistry -->
+                <div class="bg-white p-4 rounded-lg shadow hover:shadow-md transition">
+                  <h3 class="font-semibold text-lg mb-2 text-green-800">MSc Chemistry</h3>
+                  <ul class="space-y-2">
+                    <li><a href="/papers/college/msc-chemistry-sem1.html" class="text-green-600 hover:underline">Semester 1</a>
+                    <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Available</span></li>
+                    <li><a href="/papers/college/msc-chemistry-sem2.html" class="text-green-600 hover:underline">Semester 2</a></li>
+                    <li><a href="/papers/college/msc-chemistry-sem3.html" class="text-green-600 hover:underline">Semester 3</a></li>
+                    <li><a href="/papers/college/msc-chemistry-sem4.html" class="text-green-600 hover:underline">Semester 4</a></li>
+                  </ul>
+                </div>
+                
+                <!-- MSc Physics -->
+                <div class="bg-white p-4 rounded-lg shadow hover:shadow-md transition">
+                  <h3 class="font-semibold text-lg mb-2 text-green-800">MSc Physics</h3>
+                  <ul class="space-y-2">
+                    <li><a href="/papers/college/msc-physics-sem1.html" class="text-green-600 hover:underline">Semester 1</a></li>
+                    <li><a href="/papers/college/msc-physics-sem2.html" class="text-green-600 hover:underline">Semester 2</a></li>
+                    <li><a href="/papers/college/msc-physics-sem3.html" class="text-green-600 hover:underline">Semester 3</a></li>
+                    <li><a href="/papers/college/msc-physics-sem4.html" class="text-green-600 hover:underline">Semester 4</a></li>
+                  </ul>
+                </div>
+                
+                <!-- MSc Mathematics -->
+                <div class="bg-white p-4 rounded-lg shadow hover:shadow-md transition">
+                  <h3 class="font-semibold text-lg mb-2 text-green-800">MSc Mathematics</h3>
+                  <ul class="space-y-2">
+                    <li><a href="/papers/college/msc-maths-sem1.html" class="text-green-600 hover:underline">Semester 1</a></li>
+                    <li><a href="/papers/college/msc-maths-sem2.html" class="text-green-600 hover:underline">Semester 2</a></li>
+                    <li><a href="/papers/college/msc-maths-sem3.html" class="text-green-600 hover:underline">Semester 3</a></li>
+                    <li><a href="/papers/college/msc-maths-sem4.html" class="text-green-600 hover:underline">Semester 4</a></li>
                   </ul>
                 </div>
               </div>
@@ -224,7 +271,8 @@
             </div>
           </div>
         </div>
-
+      </div>
+    </section>
 
     <!-- How to Use Section -->
     <section class="py-12 bg-gray-50">
