--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -7,13 +7,7 @@
     <meta name="description"
         content="MSc Chemistry HPU Papers - Download Himachal Pradesh University Master of Science Chemistry previous year question papers (2024-2025). Inorganic, Organic, Physical Chemistry, Mathematics & Computer Applications PYQ Papers">
     <meta name="keywords"
-        content="Download MSc Chemistry HPU previous year question papers (2024-2025) for Semester 1, 2, 3, 4. Get Inorganic, Organic, Physical Chemistry, Mathematics & Computer Applications papers from Himachal Pradesh University on HP Exam Hub. Free PDFs available.">
-    <meta name="keywords"
-        content="MSc Chemistry HPU papers, HPU MSc Chemistry previous year question papers, MSc Chemistry HPU PYQ, Himachal Pradesh University Chemistry question papers, MSc Chemistry semester papers HPU, HPU Chemistry PYQ free download, Inorganic Chemistry HPU MSc, Organic Chemistry HPU MSc, Physical Chemistry HPU MSc, Mathematics for Chemistry HPU PYQ, Computer Applications in Chemistry HPU papers, HP Exam Hub MSc Chemistry, 2024 MSc Chemistry papers HPU, 2025 MSc Chemistry papers HPU">
-
-    content="MSc Chemistry HPU, HPU MSc Chemistry papers, MSc Chemistry previous year papers, HPU Chemistry PYQ,
-    Himachal Pradesh University Chemistry, MSc Chemistry question papers, HPU MSc papers download, Chemistry semester
-    papers HPU">
+        content="MSc Chemistry HPU papers, HPU MSc Chemistry previous year question papers, MSc Chemistry HPU PYQ, Himachal Pradesh University Chemistry question papers, MSc Chemistry semester papers HPU, HPU Chemistry PYQ free download, Inorganic Chemistry HPU MSc, Organic Chemistry HPU MSc, Physical Chemistry HPU MSc, Mathematics for Chemistry HPU PYQ, Computer Applications in Chemistry HPU papers, HP Exam Hub MSc Chemistry, 2024 MSc Chemistry papers HPU, 2025 MSc Chemistry papers HPU, Download MSc Chemistry HPU previous year question papers (2024-2025), Semester 1 2 3 4, Inorganic Organic Physical Chemistry Mathematics Computer Applications papers Himachal Pradesh University, HP Exam Hub, Free PDFs, MSc Chemistry previous year papers, HPU Chemistry PYQ, Himachal Pradesh University Chemistry, MSc Chemistry question papers, HPU MSc papers download, Chemistry semester papers HPU">
 
     <title>MSc Chemistry HPU Papers | Previous Year Question Papers | HP Exam Hub</title>
     <link rel="icon" href="/assets/logo.png" />
@@ -138,7 +132,8 @@
                                 <div class="flex justify-between items-center">
                                     <span class="text-sm text-gray-600">December 2024</span>
                                     <div class="space-x-2">
-                                        <a href="https://archive.org/details/msc-sem-1-inorganic-chemistry-cmem-01" target="_blank"
+                                        <a href="https://archive.org/details/msc-sem-1-inorganic-chemistry-cmem-01"
+                                            target="_blank"
                                             class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
                                             View Online
                                         </a>
